hphp/hack/test/typecheck/new_inference/transitive_error2.php.exp
File "transitive_error2.php", line 34, characters 11-12:
Invalid argument (Typing[4110])
File "transitive_error2.php", line 20, characters 18-18:
Expected D
File "transitive_error2.php", line 25, characters 17-17:
But got C
